# event-app

./: .env.dist  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.ebextensions/: django.config
.github/workflows/: event_app_ci.yml
blog/: apps.py  factories.py  forms.py  urls.py
blog/api/: views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/tests/: test_create_view.py  test_delete_view.py  test_detail_view.py  test_factories.py  test_list_view.py  test_update_view.py
blog/views/: __init__.py  dashboard.py  pdf_view.py
core/: settings.py  urls.py
events/: factories.py  models.py  urls.py  views.py
events/api/: views.py
events/migrations/: 0003_alter_event_repertoire.py  0005_alter_event_place.py  0006_alter_event_name.py
events/tests/: test_create_view.py  test_delete_view.py  test_detail_view.py  test_factories.py  test_list_view.py  test_update_view.py
foo/: mydatabase  mydatabase2
foo/API/: urls.py  views.py
foo/blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
foo/core/: settings.py  urls.py
foo/events/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
foo/music_notes/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
foo/organizations/: apps.py  factories.py  forms.py  models.py  urls.py  views.py
foo/users/: forms.py  (+3 more)
music_notes/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
organizations/: apps.py  factories.py  forms.py  models.py  urls.py  views.py
src/: Dockerfile
templates/: contact.html
users/: urls.py  views.py
(+146 files in other folders)
